crates/privacy-pools-sdk-core/tests/ui/secret_serde.stderr
error[E0277]: the trait bound `Secret: serde::Serialize` is not satisfied
 --> tests/ui/secret_serde.rs:8:23
  |
8 |     require_serialize(&secret);
  |     ----------------- ^^^^^^^ the trait `Serialize` is not implemented for `Secret`
  |     |
  |     required by a bound introduced by this call
  |
  = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Secret` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `Serialize`:
            &'a T
            &'a mut T
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
          and $N others
note: required by a bound in `require_serialize`
 --> tests/ui/secret_serde.rs:4:25
  |
4 | fn require_serialize<T: serde::Serialize>(_: &T) {}
  |                         ^^^^^^^^^^^^^^^^ required by this bound in `require_serialize`

error[E0277]: the trait bound `MasterKeys: serde::Serialize` is not satisfied
  --> tests/ui/secret_serde.rs:14:23
   |
14 |     require_serialize(&keys);
   |     ----------------- ^^^^^ the trait `Serialize` is not implemented for `MasterKeys`
   |     |
   |     required by a bound introduced by this call
   |
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `MasterKeys` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
note: required by a bound in `require_serialize`
  --> tests/ui/secret_serde.rs:4:25
   |
 4 | fn require_serialize<T: serde::Serialize>(_: &T) {}
   |                         ^^^^^^^^^^^^^^^^ required by this bound in `require_serialize`
